--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2 class="logo">V'i'LABS-NITW</h2>
       <div class="toggle"></div>
     </header>
-    <video src="/site/media/test2.mp4" muted loop autoplay></video>
+    <video src="/site/media/test1.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
       <h4>Everything is theoretically</h4>
@@ -25,11 +25,10 @@
   <div class="menu">
     <ul>
       <li><a href="">Home</a></li>
-      <li><a href="#">Assignment-1</a></li>
-      <li><a href="#">Assignment-2</a></li>
-      <li><a href="#">Assignment-3(i)</a></li>
-      <li><a href="#">Assignment-3(ii)</a></li>
-      <li><a href="#">Assignment-4</a></li>
+      <li><a href="#">New Registration</a></li>
+      <li><a href="#">Student Login</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Feedback</a></li>
     </ul>
   </div>
   <script>
