--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="/site/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>ViLABS-NITW</title>
 </head>
 
@@ -13,7 +13,7 @@
       <h2 class="logo">V'i'LABS-NITW</h2>
       <div class="toggle"></div>
     </header>
-    <video src="/site/media/test1.mp4" muted loop autoplay></video>
+    <video src="media/test1.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
       <h4>Everything is theoretically</h4>
